<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter"
        app:showAsAction="always"
        android:title="Filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        >
        <menu>
            <item
                android:title="@string/toutes_les_r_unions"
                android:id="@+id/SHOW_ALL"
                app:showAsAction="never"/>
            <item android:title="@string/filtre_par_date"
                  android:id="@+id/dateFilter"/>
            <item
                android:title="@string/filtre_par_salle"
                android:id="@+id/roomFilter"/>
        </menu>
    </item>
</menu>