...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/item_list_user_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_list_user_avatar"
...
